docs/sf-export/sfdx-raw/objects/Payment_Summary__c/Payment_Summary__c.object-meta.xml
<CustomObject>
    <label>Payment Summary</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Payment Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>