docs/sf-export/sfdx-raw/objects/Payment_Summary__c/fields/Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected__c</fullName>
    <label>Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>