docs/sf-export/sfdx-raw/objects/Payment_Summary__c/fields/Amount_In_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_Schedule__c</fullName>
    <label>Amount In Schedule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>