docs/sf-export/sfdx-raw/objects/Payment_Summary__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Summaries</relationshipLabel>
    <relationshipName>PaymentSummaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>