docs/sf-export/sfdx-raw/objects/Payment_Summary__c/fields/Completed_Payments__c.field-meta.xml
<CustomField>
    <fullName>Completed_Payments__c</fullName>
    <label>Completed Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>