docs/sf-export/sfdx-raw/objects/Payment_Summary__c/fields/Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount__c</fullName>
    <formula>Total_Amount__c - Amount_Collected__c - Amount_In_Schedule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>