docs/sf-export/sfdx-raw/objects/Payment_Summary__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Program Fee</fullName>
            </value>
            <value>
                <fullName>Program Fee - Settlements</fullName>
            </value>
            <value>
                <fullName>Retainer Fee</fullName>
            </value>
            <value>
                <fullName>Setup Fee</fullName>
            </value>
            <value>
                <fullName>Processor Fee</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
            <value>
                <fullName>Citadel Fee</fullName>
            </value>
            <value>
                <fullName>Escrow Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>