docs/sf-export/sfdx-raw/objects/Payment_Summary__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <formula>IF(ISPICKVAL(Payment_Type__c, &apos;Draft&apos;), &apos;Escrow&apos;, 
    IF(ISPICKVAL(Payment_Type__c, &apos;Settlement&apos;), &apos;Creditors&apos;, 
        IF(ISPICKVAL(Payment_Type__c, &apos;Program Fee&apos;), &apos;Coastal Debt&apos;, 
            IF(ISPICKVAL(Payment_Type__c, &apos;Program Fee - Settlements&apos;), &apos;Coastal Debt&apos;, 
                IF(ISPICKVAL(Payment_Type__c, &apos;Retainer Fee&apos;), &apos;Coastal Debt&apos;,
                    IF(ISPICKVAL(Payment_Type__c, &apos;Setup Fee&apos;), &apos;Citadel&apos;,  
                        IF(ISPICKVAL(Payment_Type__c, &apos;Processor Fee&apos;), &apos;Payment Processor&apos;,
                            IF(ISPICKVAL(Payment_Type__c, &apos;Service Fee&apos;), &apos;Coastal Debt&apos;,
                                IF(ISPICKVAL(Payment_Type__c, &apos;Citadel Fee&apos;), &apos;Citadel&apos;,
                                    IF(ISPICKVAL(Payment_Type__c, &apos;Escrow Amount&apos;), &apos;Escrow&apos;, &apos;&apos;)
                                )
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
    <label>Recipient</label>
    <type>Text</type>
</CustomField>