docs/sf-export/sfdx-raw/objects/Payment_Summary__c/fields/Remaining_Payments__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Payments__c</fullName>
    <label>Remaining Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>