docs/sf-export/sfdx-raw/objects/Payment_Summary__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <formula>IF(ISPICKVAL(Payment_Type__c , &apos;Draft&apos;), 1,
IF(ISPICKVAL(Payment_Type__c , &apos;Escrow&apos;),2 ,
IF(ISPICKVAL(Payment_Type__c , &apos;Program Fee&apos;), 3,
IF(ISPICKVAL(Payment_Type__c , &apos;Program Fee - Settlements&apos;), 4,
IF(ISPICKVAL(Payment_Type__c , &apos;Retainer Fee&apos;), 5,
IF(ISPICKVAL(Payment_Type__c , &apos;Setup Fee&apos;), 6,
IF(ISPICKVAL(Payment_Type__c , &apos;Service Fee&apos;), 7,
IF(ISPICKVAL(Payment_Type__c , &apos;Citadel Fee&apos;), 8,
IF(ISPICKVAL(Payment_Type__c , &apos;Processor Fee&apos;), 9,
IF(ISPICKVAL(Payment_Type__c , &apos;Settlements&apos;), 10, 0) ) ) ) ) ) ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>